[package]
name = "cat-nipa"
version = "0.1.0"
edition = "2024"

[features]
default = ["app"]
app = [
	"dep:clap",
	"dep:env_logger",
	"dep:indicatif",
	"dep:egui",
	"dep:egui_extras",
	"dep:egui_ltreeview",
	"dep:eframe",
	"dep:color-eyre"
]

[dependencies]
flate2 = { version = "1.1.5", features = ["zlib-rs"], default-features = false }
log = { version = "0.4.29", features = ["std"] }
rayon = "1.11.0"
test-log = "0.2.19"
thiserror = "2.0.17"

# Application dependencies
indicatif = { version = "0.18.3", features = ["rayon"], optional = true}
clap = { version = "4.5.53", features = ["derive"], optional = true}
env_logger = { version = "0.11.8", optional = true }
egui_extras = { version = "0.33.3", features = ["serde"], optional = true }
egui = { version = "0.33.3", optional = true }
eframe = { version = "0.33.3", features = ["serde", "wgpu"], optional = true }
color-eyre = { version = "0.6.5", optional = true }
egui_ltreeview = {version = "0.6.0", optional = true}
