[package]
name = "cat-nipa"
version = "0.1.0"
edition = "2024"

[dependencies]
chardetng = "0.1.17"
clap = { version = "4.5.53", features = ["derive"] }
encoding_rs = "0.8.35"
env_logger = "0.11.8"
flate2 = { version = "1.1.5", features = ["zlib-rs"], default-features = false }
indicatif = "0.18.3"
infer = "0.19.0"
log = { version = "0.4.29", features = ["std"] }
rayon = "1.11.0"
strum = "0.27.2"
strum_macros = "0.27.2"
test-log = "0.2.19"
thiserror = "2.0.17"
